[package]
name = "wmi"
version = "0.9.3"
authors = ["Ohad Ravid <ohad.rv@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://docs.rs/crate/wmi"
homepage = "https://github.com/ohadravid/wmi-rs"
repository = "https://github.com/ohadravid/wmi-rs"
description = """
WMI crate for rust.
"""
categories = ["api-bindings", "os::windows-apis"]
keywords = ["wmi", "com", "win32"]
resolver = "2"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"

[features]
default = ["chrono"]
# Use { default-features = false, features = ["time"] } to use `time` instead of `chrono`.

test = ["lazy_static", "async-std"]
async-query = ["async-channel", "futures", "com"]

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["objbase", "wbemcli", "objidlbase", "oaidl", "oleauto", "errhandlingapi", "wtypes", "wtypesbase"] }
log = "0.4"
widestring = "1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"], optional = true }
time = { version = "0.3", features = ["formatting", "parsing", "macros", "serde"], optional = true }
lazy_static = { version = "1.4.0", optional = true }
thiserror = "^1"
async-channel = {version = "1.6", optional = true}
async-std = { version = "1.10",  features = ["attributes"], optional = true }
futures = { version = "0.3", optional = true}
com = { version = "0.6", features = ["production"], optional = true }

[dev-dependencies]
lazy_static = "1.4.0"
serde_json = { version = "1.0" }
criterion = "0.3"
tempdir = "0.3"
async-std = { version = "1.10",  features = ["attributes"] }

[[bin]]
name = "wmiq"

[[bench]]
name = "benchmark"
path = "./src/benches/benchmark.rs"
harness = false
